[project]
name = "common-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "deeplift",
    "einops",
    "gradio",
    "holistictraceanalysis",
    "jsonargparse",
    "opt-einsum",
    "optuna",
    "pandas[hdf5]",
    "plotnine",
    "shap",
    "tbparse",
    "transformers",
    "torch",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"


[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
