[project]
name = "common-ai"
version = "0.1.4"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ljw", email = "ljw2017@sjtu.edu.cn" }
]
requires-python = ">=3.11"
dependencies = [
    "deeplift",
    "einops",
    "gradio",
    "holistictraceanalysis",
    "jsonargparse",
    "opt-einsum",
    "optuna",
    "pandas[hdf5]",
    "plotnine",
    "shap",
    "tbparse",
    "transformers",
    "torch",
    "datasets",
]

[project.scripts]
common-ai = "common_ai:main"

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
